<resources>
    <string name="app_name">SongsQueues</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">SongsQueues</string>
    <string name="nav_header_subtitle">github.com/HighSoftWare96</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_title">SongsQueues login</string>
    <string name="signup_hint">Or signup with:</string>
    <string name="lineups_menu">My lineups</string>
    <string name="events_menu">My events</string>
    <string name="songs_menu">My songs</string>
    <string name="account_menu">My account</string>
    <string name="settings_menu">Settings</string>
    <string name="main_menu_cat">Tools</string>
    <string name="settings_menu_cat">App settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_creation_list">Last modified:</string>
    <string name="description_list">Description:</string>
    <string name="songs_list">Songs:</string>
    <string name="cat_menu_recents_string">Recents</string>
    <string name="cat_menu_all_string">All</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="search_lineup_hint">Search for a lineup</string>
    <string name="recent_tab_name">Recents</string>
    <string name="all_tab_name">All</string>
    <string name="action_new_category">Add new category</string>
    <string name="action_logout">Logout</string>
    <string name="share_it_nav">Share it!</string>
    <string name="shareapp_subject_text">Sharing SongQueues for Android with you!</string>
    <string name="shareapp_body_text">Hey there, I want to share with you a new app I\'ve installed: with SongQueues you can save in the cloud your musical lineup for your events and then have them on whatever Android device you want! Try that now: https://github.com/HighSoftWare96!</string>
    <string name="delete_list_item_menu">Delete the lineup</string>
    <string name="share_list_item_menu">Share the lineup</string>
    <string name="title_activity_lineup_presentation">LineupPresentationActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="select_as_favourite_lineupmenuitem">Set favourite</string>
    <string name="select_as_favourite_itemmenu">Make favourite</string>
    <string name="remove_favourite_itemmenu">Remove favourite</string>
    <string name="details_tab_name">Details</string>
    <string name="lineup_component_tab_name">Lineup</string>
    <string name="songs_tab_name">Songs</string>
    <string name="play_lineup">Play</string>
    <string name="action_delete">Delete</string>
    <string name="metadata">Metadata</string>
    <string name="data_creation">Created on:</string>
    <string name="data_last_modified">Last modified on:</string>
    <string name="description">Description</string>
    <string name="data_category">Category:</string>
    <string name="events">Related events</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmdialog_confirm_text_default">Are you sure?</string>
    <string name="sure_delete_lineup">Are you sure to delete this lineup?</string>
    <string name="new_event_action">Add new event</string>
    <string name="add_event_hint">Add a new event</string>
    <string name="edit_eventname_hint">Event title</string>
    <string name="ok_string">Ok</string>
    <string name="cancel_string">Cancel</string>
    <string name="event_notification_menu_activate_not">Notify me</string>
    <string name="event_edit_select_notification_mode">Set the notification</string>
</resources>
