<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionDetails_play_lineup"
        android:icon="@drawable/play_icon"
        android:title="@string/play_lineup"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionDetails_favourite_lineup"
        android:icon="@drawable/favourite_empty_icon_light"
        android:title="@string/select_as_favourite_itemmenu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionDetails_refresh_lineup"
        android:icon="@drawable/refresh_icon"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionDetails_delete_lineup"
        android:icon="@drawable/delete_icon"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>