<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_vertical|center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/event_title_edit_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/events_icon"
        android:hint="@string/add_event_hint"
        android:inputType="text|textShortMessage"
        android:padding="15dp"
        android:textAlignment="textEnd"
        android:textSize="20sp" />

    <CalendarView
        android:id="@+id/event_date_edit_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|left|end"
        android:orientation="horizontal"
        android:padding="20dp"
        android:paddingStart="190dp">

        <Button
            android:id="@+id/dialog_ok_btn"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/simple_ripple"
            android:text="@string/ok_string"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/simple_ripple"
            android:text="@string/cancel_string" />
    </LinearLayout>

</LinearLayout>